--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "husky": "^4.2.5",
     "mockjs": "^1.1.0",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
